crates/platform/src/snapshots/platform__low_port__tests__empty_output.snap
---
source: crates/platform/src/low_port.rs
expression: inspection
---
LowPortInspection {
    ports: [
        LowPortState {
            port: 80,
            available: false,
            owners: [],
        },
        LowPortState {
            port: 443,
            available: false,
            owners: [],
        },
    ],
}
