crates/platform/src/snapshots/platform__low_port__tests__nginx_master_workers.snap
---
source: crates/platform/src/low_port.rs
expression: "(inspection, messages)"
---
(
    LowPortInspection {
        ports: [
            LowPortState {
                port: 80,
                available: false,
                owners: [
                    PortOwner {
                        pid: 412,
                        command: "nginx",
                    },
                    PortOwner {
                        pid: 413,
                        command: "nginx",
                    },
                    PortOwner {
                        pid: 414,
                        command: "nginx",
                    },
                ],
            },
            LowPortState {
                port: 443,
                available: false,
                owners: [
                    PortOwner {
                        pid: 412,
                        command: "nginx",
                    },
                    PortOwner {
                        pid: 413,
                        command: "nginx",
                    },
                ],
            },
        ],
    },
    [
        "Loopback TCP port 80 is unavailable. TCP listeners reported on this port: nginx (pid 412), nginx (pid 413), nginx (pid 414).",
        "Loopback TCP port 443 is unavailable. TCP listeners reported on this port: nginx (pid 412), nginx (pid 413).",
    ],
)
